sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:12: error: not found: value l
          l=j
          ^AlgShellSort:16: error: not found: value l
    setValeur(l,v)
              ^AlgShellSort:16: error: not found: value v
    setValeur(l,v)
                ^